		Modified Teleport activity to use the best/closest open cell to the target destination for teleports (for ChronoshiftPower this only applies on the return trip).
		Renamed ChronoshiftDeploy trait to PortableChrono.
		Added LineBuildNode trait to filter which structure(s) a LineBuild actor can be attached to.
	Server:
		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
	Asset Browser:
		Filenames are now listed in alphabetical order
	Map Editor:
		Removed legacy INI/MPR map import.
		Fixed being unable to use the flood fill tool on similar grass/snow/desert tiles.
	Utility:
		Added an improved INI/MPR map import.
		Added an --upgrade-mod feature to upgrade the yaml of mods to the latest specifications.
	Packaging:
		Removed portable install option from Windows installer as the game left without write access breaks content download and error log generation.
		Added HTML documentation to the Windows installer.
		Fixed broken FreeType 2 dependency for Fedora RPM.
		Added SDL 2 as a dependency for the RPM package.
	Mod / Custom map compatibility:
		Altitude is no longer parsed from actor templates in maps. Specify CenterPosition instead.
		system.yaml has been split into four files for all mods: misc.yaml, ai.yaml, player.yaml and world.yaml.
		Run `OpenRA.Utility.exe --upgrade-mod <mod> 20131223` to automatically upgrade mod rules.
		Run `OpenRA.Utility.exe --upgrade-map <map path> 20131223` to automatically upgrade custom map rules.
		Added a new trait Demolishable for buildings to handle the C4 demolition.
		Mods that use custom TileSize must specify both width and height.
		If you spot black tiles in your Dune 2000 ARRAKIS maps, replace them with the remaining sand and rock tiles. Go to Map → Fix Open Areas to randomize them.
		The TestFile check in mod.yaml has been renamed to TestFiles (plural!) and now supports a comma-separated list of assets that are required to load the game.