@@ -1,6 +1,6 @@
 #region Copyright & License Information
 /*
- * Copyright 2007-2011 The OpenRA Developers (see AUTHORS)
+ * Copyright 2007-2014 The OpenRA Developers (see AUTHORS)
  * This file is part of OpenRA, which is free software. It is made
  * available to you under the terms of the GNU General Public License
  * as published by the Free Software Foundation. For more information,
@@ -28,7 +28,7 @@ namespace OpenRA.Mods.RA
 		public double MapControl;
 		public int OrderCount;
 
-		public int EarnedThisMinute 
+		public int EarnedThisMinute
 		{
 			get
 			{
@@ -58,7 +58,7 @@ namespace OpenRA.Mods.RA
 			var total = (double)world.Map.Bounds.Width * world.Map.Bounds.Height;
 			MapControl = world.Actors
 				.Where(a => !a.IsDead() && a.IsInWorld && a.Owner == player && a.HasTrait<RevealsShroud>())
-				.SelectMany(a => world.FindTilesInCircle(a.Location, a.Trait<RevealsShroud>().Range.Clamp(WRange.Zero, WRange.FromCells(50)).Range / 1024))
+				.SelectMany(a => world.FindTilesInCircle(a.Location, a.Info.Traits.Get<RevealsShroudInfo>().Range.Clamp(WRange.Zero, WRange.FromCells(50)).Range / 1024))
 				.Distinct()
 				.Count() / total;
 		}
