@@ -156,6 +156,7 @@ NEW:
 		Modified Teleport activity to use the best/closest open cell to the target destination for teleports (for ChronoshiftPower this only applies on the return trip).
 		Renamed ChronoshiftDeploy trait to PortableChrono.
 		Added LineBuildNode trait to filter which structure(s) a LineBuild actor can be attached to.
+		Actors now inform the shroud to their movements instead of the shroud polling for it.
 	Server:
 		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
 	Asset Browser:
